# strimzi-registry-operator

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  README.rst  pyproject.toml  ruff-shared.toml  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: ci.yaml  minikube.yaml  periodic-ci.yaml
manifests/: deployment.yaml  kustomization.yaml  manifest.yaml  rbac.yaml  registry-crd.yaml
minikube/: .gitignore  buildimage.sh  deployregistry.sh  deploysro.sh  kafka.yaml  registry-topic.yaml  registry-user.yaml  schema-registry.yaml  setupkafka.sh  testregistryapi.sh  testsubject.json
minikube/operator-deployment/: kustomization.yaml  sro-deployment.yaml
requirements/: dev.in  dev.txt  main.in  main.txt
scripts/: install-base-packages.sh  install-dependency-packages.sh
src/strimziregistryoperator/: certprocessor.py  deployments.py  k8s.py  startup.py  state.py  version.py
src/strimziregistryoperator/handlers/: __init__.py  createregistry.py  secretwatcher.py
strimziregistryoperator/: certprocessor.py  deployments.py  k8s.py  k8stools.py  startup.py  state.py  version.py
strimziregistryoperator/handlers/: __init__.py  createregistry.py  secretwatcher.py
tests/: test_certprocessor.py  test_deployments.py
