[metadata]
name = strimzi-registry-operator
description = A Kubernetes Operator for deploying Confluent Schema Registry servers into a Strimzi-based Kafka cluster.
author = Association of Universities for Research in Astronomy, Inc. (AURA)
author_email = sqre-admin@lists.lsst.org
long_description = file: README.rst, LICENSE
long_description_content_type = text/x-rst
license = MIT
url = https://github.com/lsst-sqre/strimzi-registry-operator
project_urls =
    Source code = https://github.com/lsst-sqre/strimzi-registry-operator
    Issue tracker = https://github.com/lsst-sqre/strimzi-registry-operator/issues
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Natural Language :: English
    Operating System :: POSIX
keywords =
    lsst

[options]
zip_safe = False
include_package_data = True
packages=find:
python_requires = >=3.9
setup_requires =
    setuptools_scm
# Use requirements/main.in for runtime dependencies instead of install_requires

[options.packages.find]
exclude =
    docs
    tests

[flake8]
max-line-length = 79
# E203: whitespace before :, flake8 disagrees with PEP-8
# W503: line break after binary operator, flake8 disagrees with PEP-8
ignore = E203, W503

[mypy]
disallow_untyped_defs = True
disallow_incomplete_defs = True
ignore_missing_imports = True
show_error_codes = True
strict_equality = True
warn_redundant_casts = True
warn_unreachable = True
warn_unused_ignores = True
